Downgrade project from Java 25 to 17 to improve compatibility across systems